# navi-search-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
navi_search/: app.py
